--- a/wishlist/react-ui/public/index.html
+++ b/wishlist/react-ui/public/index.html
@@ -3,17 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Atsea Shop</title>
+    <title>Swaglist</title>
   </head>
   <body>
-    <style type="text/css">
-      body {
-        max-width: 100vw;
-        overflow-x: hidden;
-      }
-    </style>
     <div id="root"></div>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
